# Hackmeter

./: README.md  pyproject.toml
hackmeter/: client.py  configuration.yaml  hack.py
hackmeter/tests/: __init__.py  test_client.py
